# VenueMap

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1d6e345e4986_initial_schema.py  94a33daf89c3_add_lat_lng_to_venues.py  c85744bc172a_add_composite_index_on_events_venue_id_.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: EventCard.jsx  Sidebar.jsx  VenueMap.jsx
src/venuemap/: geocoding.py  http.py  main.py  sync.py
src/venuemap/api/: deps.py  schemas.py
src/venuemap/api/routes/: events.py  genres.py  venues.py
src/venuemap/db/: models.py  session.py  upsert.py
src/venuemap/models/: event.py
src/venuemap/scrapers/: base.py  voxhall.py
src/venuemap/scrapers/aarhus/: erlings.py  radar.py  train.py  turkis.py  volumevillage.py  voxhall.py
